# relational-structure-in-clip

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/scripts/: validate_naming.py
config/data/: generate_captions_for_vg.yaml  preprocess_vg_coco.yaml  preprocess_vg_for_graph_clip.yaml  preprocess_vg_for_graphormer.yaml
config/models/: convert_clip_variants_to_hf.yaml  pretrain_graph_clip.yaml  pretrain_graphormer.yaml  pretrain_graphormer_with_ssl.yaml  probe_clip_graph_properties.yaml
config/visualization/: anisotropy_graph_clip.yaml  histogram_graph_properties.yaml  results_clip_graph_properties.yaml
docs/: api-reference.md  how-to-guides.md  index.md
src/relationalstructureinclip/: __init__.py  app.py  utils.py
src/relationalstructureinclip/data/: __init__.py  generate_captions_for_vg.py  preprocess_graphormer.py  preprocess_vg_coco.py  preprocess_vg_for_graph_clip.py  preprocess_vg_for_graphormer.py
src/relationalstructureinclip/models/: __init__.py  convert_clip_variants_to_hf.py  pretrain_graph_clip.py  probe_clip_graph_properties.py
src/relationalstructureinclip/models/graph_clip_model/: __init__.py  collating_graph_clip.py  collator_graph_clip.py  configuration_graph_clip.py  graph_ssl_pretrain.py  modeling_graph_clip.py  modeling_graphormer.py  pretrain_graph_clip.py  pretrain_graphormer.py
src/relationalstructureinclip/models/graphormer/: __init__.py  collating_graphormer.py  pretrain_graphormer.py
src/relationalstructureinclip/models/probing/: __init__.py  convert_clip_variants_to_hf.py  probe_clip_graph_properties.py
src/relationalstructureinclip/visualization/: __init__.py  anisotropy_graph_clip.py  histogram_graph_properties.py  results_clip_graph_properties.py
tests/: test_convert_clip_variants_to_hf.py  test_histogram_graph_properties.py  test_preprocess_vg_coco.py  test_preprocess_vg_for_graph_clip.py  test_preprocess_vg_for_graphormer.py  test_probe_clip_graph_properties.py  test_results_clip_graph_properties.py
