[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "relationalstructureinclip"
version = "0.1.0"
description = "Probing relational structures in CLIP with applications to neural data."
authors = [{ name = "Helena Balabin", email = "helena.balabin@kuleuven.be" }]
license = { text = "Internal Use Only" }
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "transformers>=4.57.0,<5",
  "datasets>=4.1.1,<5",
  "torch==2.6.0",
  "torch-geometric",
  "numpy>=2.3.3,<3",
  "pandas>=2.3.3,<3",
  "networkx>=3.5,<4",
  "tqdm>=4.67.1,<5",
  "pillow>=11.3.0,<12",
  "torchmetrics",
  "matplotlib>=3.10.7,<4",
  "scikit-learn>=1.3.2,<2",
  "torchvision",
  "mlflow>=3.4.0,<4",
  "himalaya>=0.4.8,<0.5",
  "open-clip-torch>=2.24.0,<3",
  "peft>=0.17.1,<1",
  "hydra-core>=1.3.2,<2",
  "scipy>=1.16.3,<2"
]
[dependency-groups]
dev = [
  "toml==0.10.2",
  "nbconvert==7.8.0",
  "black[jupyter]==23.7.0",
  "hydra-core==1.3.2",
  "ipykernel==6.24.0",
  "mkdocs==1.5.3",
  "mkdocs-git-revision-date-localized-plugin==1.2.2",
  "mkdocs-material==9.5.4",
  "mkdocs-mermaid2-plugin==1.1.1",
  "mkdocstrings-python==1.8.0",
  "pre-commit==3.3.3",
  "pymarkdownlnt==0.9.13",
  "pytest==7.4.0",
  "pytest-benchmark==4.0.0",
  "pytest-xdist==3.3.1",
  "rope==1.9.0",
  "ruff==0.1.13",
  "dvc==3.40.1"
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[tool.black]
line-length = 79
target-version = ["py312"]
include = '''
(
    ^notebooks/.*\.ipynb$
  | \.pyi?$
)
'''

[tool.pymarkdown]
disable-rules = ["MD046"]

[tool.ruff]
select = ["F401","F402","F403","F405","F601","F602","F621","F631","F632","F701","F702","F704","F706","F707","F722",
"F811","F821","F841","E101","E111","E112","E113","E114","E115","E116","E117","E201","E202","E203","E211","E225","E231","E251","E261","E262",
"E265","E266","E271","E272","E273","E274","E275","E401","E402","E501","E711","E712","E713","E714","E721","E722","E731","I001","I002","N801",
"N802","N803","N804","N805","N806","D100","D101","D102","D103","D104","D105","D106","D107"]
line-length = 120
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
